@@ -579,7 +579,6 @@ FORWARD_MAPPER (roundb)
 FORWARD_MAPPER (signum)
 FORWARD_MAPPER (sin)
 FORWARD_MAPPER (sinh)
-FORWARD_MAPPER (sqrt)
 FORWARD_MAPPER (tan)
 FORWARD_MAPPER (tanh)
 FORWARD_MAPPER (finite)
